arts[words] page
- Add `section` field to posts, for each words page to filter on.
- Port page from Gridsome, merge with code[words] work.
- Port arts-only posts and fix timestamp format.

--- a/src/content/words/2019-04-16-rubymine-2019-1.md
+++ b/src/content/words/2019-04-16-rubymine-2019-1.md
@@ -3,6 +3,7 @@ title: RubyMine 2019.1
 date: 2019-04-16T03:38-0500
 tags: 
 status: published
+section: code
 ---
 Quick thoughts on [RubyMine 2019.1][new], which came out earlier this
 month but I didn't read the release notes until now:
