Format Markdown files

--- a/src/content/words/2023-12-31-music-2023.md
+++ b/src/content/words/2023-12-31-music-2023.md
@@ -1,5 +1,5 @@
 ---
-title: "more songs I heard"
+title: 'more songs I heard'
 date: 2023-12-31T22:31:08-0500
 image: /images/2023-music.png
 section: arts
@@ -90,5 +90,5 @@ his hits from sixty years ago! This song is from 2021!
 <iframe width="560" height="315" src="https://www.youtube.com/embed/F0ahB25FJ6o?si=tx2Bs8LKz__ThRbT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 From the motion picture <cite>Arrival</cite>. I mean, have you seen
-this movie? Have you *heard* this movie? I don't understand how this music
+this movie? Have you _heard_ this movie? I don't understand how this music
 was created and I hope I never figure it out.
