Update HTTP links to HTTPS
Where possible. Also general link rot cleanup, including making venue web sites optional, now that some of them have closed.

--- a/src/content/shows/2019-03-02-foul-play.md
+++ b/src/content/shows/2019-03-02-foul-play.md
@@ -1,7 +1,7 @@
 ---
 when: Saturday, March&nbsp;2
 where: HUGE Theater
-whereUrl: http://www.hugetheater.com/
+whereUrl: https://www.hugetheater.com/
 firstDate: 2019-03-02
 lastDate: 2019-03-02
 ---
@@ -9,4 +9,4 @@ lastDate: 2019-03-02
 Accompanied [Foul Play: Improvised Agatha Christie.][foul-play]
 _(There's been a murder.)_
 
-[foul-play]: http://www.hugetheater.com/event/foul-play-an-improvised-agatha-christie/
+[foul-play]: https://www.hugetheater.com/event/foul-play-an-improvised-agatha-christie/
