--- a/src/content/shows/2019-06-05-painters.md
+++ b/src/content/shows/2019-06-05-painters.md
@@ -1,7 +1,7 @@
 ---
 when: Wednesdays in June and July
 where: HUGE Theater
-whereUrl: http://www.hugetheater.com/
+whereUrl: https://www.hugetheater.com/
 firstDate: 2019-06-05
 lastDate: 2019-07-31
 ---
