--- a/src/content/shows/2020-01-19-buzz-trio.md
+++ b/src/content/shows/2020-01-19-buzz-trio.md
@@ -1,7 +1,7 @@
 ---
 when: 11 AM, Sunday, January 19
 where: The Depot
-whereUrl: http://www.thedepotcoffeehouse.com
+whereUrl: https://www.thedepotcoffeehouse.com
 firstDate: 2020-01-19
 lastDate: 2020-01-19
 ---
