Social image experiment

--- a/src/content/words/2024-03-04-the-month-in-me.mdx
+++ b/src/content/words/2024-03-04-the-month-in-me.mdx
@@ -2,7 +2,7 @@
 title: 'the month in me'
 date: 2024-03-04T20:34:27-0500
 tags:
-image: TK
+image: /images/con-of-the-north-dice.jpg
 section: both
 ---
 
