--- a/src/content/words/2024-04-07-the-month-in-me.mdx
+++ b/src/content/words/2024-04-07-the-month-in-me.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'the month in me #2'
+title: 'the month in me: March 2024'
 date: 2024-04-07T20:34:27-0500
 tags:
 image: /images/big-ears-2024.jpg
